--- a/Lab1/layout.css
+++ b/Lab1/layout.css
@@ -9,5 +9,13 @@
 body
 {
     font-family: Arial, Helvetica, sans-serif;
+    
 }
 
+header,nav,article,div,footer
+{
+    padding : 10px;
+    background-color: yellow;
+    border:1px solid grey;
+    text-align: center;
+}
